// protoc -I=. -I=$GOPATH/src --go_out=plugins=grpc:. *.proto
syntax = "proto3";

package dtalk.record;
option go_package = "github.com/txchat/dtalk/proto/record";

import "github.com/txchat/im/api/protocol/protocol.proto";

// record --> mq
message PushMsgMQ {
  string appId = 1;
  string from = 2;
  string target = 3;
  im.protocol.Channel channel = 4;
  bytes msg = 5;
}

enum Operation {
  BatchPush = 0;
  MarkRead = 1;
  StoreMsg = 2;
  SyncMsg = 3;
}

// record --> mq
message RecordDeal {
  string appId = 1;
  string fromId = 2;
  string key = 3;
  Operation opt = 4;
  bytes msg = 5;
}

// Operation=MarkRead
message Marked {
  string type = 1;
  repeated int64 mids = 2;
}

// Operation=SyncMsg
message Sync { int64 mid = 1; }
